# pymodule

./: .gitignore  CMakeLists.txt  README.md  build.bash  clean.bash  make.bash  test.bash  test.py
cmake/: cmake_uninstall.cmake.in
src/: module.cpp
